update catalina.sh